--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,9 +1,9 @@
 html {
-  background: url(../img/html-bg.png) no-repeat center center fixed;
+  /* background: url(../img/html-bg.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover; */
 }
 
 html,
@@ -12,14 +12,14 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  line-height: 1.8em;
+  line-height: 2.3em;
 
 }
 
 
 body {
-  /* background: #f7f7f7; */
-  background: transparent !important;
+  background: #e0e0e0;
+  /* background: transparent !important; */
   font-family: IranianSans !important;
   font-size: 15px;
   color: #f7f7f7;
@@ -128,23 +128,10 @@ li {
 /* Style Slider */
 .carousel {
   text-shadow: rgb(0, 0, 0) 0px 0px 2px;
-  /* position: absolute;
-  left: 0px;
-  right: 0px;
-  top: 0px;
-  bottom: 0px;
-  overflow: hidden; */
 }
-
-/* .carousel,
-.item,
-.active {
-  height: 100vh;
-} */
 
 .carousel-caption {
   background: rgba(97, 6, 90, 0.79);
-  /* bottom: 0 !important; */
   width: 100%;
   left: 0;
   right: 0;
@@ -208,8 +195,32 @@ li {
 /* Start Style Elnaz */
 
 section {
-  background: #661c69;
+  background: transparent;
   padding: 15px;
+  color:#10222e;
+}
+.section-bg{
+  background-color: #10222e;
+  color:#ccc;
+}
+.section-khedmat {
+  background-image: url("../img/khedmat.jpeg");
+  background-color: #cccccc;
+  height: 600px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+}
+
+.section-khedmat-text {
+  text-align: justify;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 3;
 }
 
 a {
@@ -277,3 +288,148 @@ a:hover {
 }
 
 /* End Stye Elnaz */
+
+/* Start Footr */
+#myFooter {
+  /* background-color: #331a41; */
+  background: #8e4571;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #240b31, #8e4571);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #240b31, #8e4571); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  color: white;
+  padding-top: 20px;
+  text-align: right;
+}
+
+#map-container {
+  height: 240px;
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+#myFooter .row {
+  margin: 0 85px;
+}
+
+#myFooter .footer-copyright {
+  background-color: rgba(51, 7, 66, 0.8313725490196079);
+  padding-top: 3px;
+  padding-bottom: 3px;
+  text-align: center;
+}
+
+#myFooter .footer-copyright p {
+  margin: 10px;
+  color: #ccc;
+}
+
+#myFooter .container {
+  width: auto;
+}
+
+#myFooter ul {
+  list-style-type: none;
+  padding-right: 0;
+  line-height: 1.7;
+}
+
+#myFooter h5 {
+  font-size: 18px;
+  color: white;
+  font-weight: bold;
+  margin-top: 30px;
+}
+
+#myFooter a {
+  color: #d2d1d1;
+  text-decoration: none;
+}
+
+#myFooter a:hover,
+#myFooter a:focus {
+  text-decoration: none;
+  color: white;
+}
+
+#myFooter .social-networks {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 38px;
+}
+
+#myFooter .fa {
+  font-size: 30px;
+  margin-right: 15px;
+  margin-left: 20px;
+  background-color: white;
+  color: #182c39;
+  border-radius: 51%;
+  padding: 10px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 31px;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+#myFooter .fa-facebook:hover {
+  color: #2b55ff;
+}
+
+#myFooter .fa-facebook:focus {
+  color: #2b55ff;
+}
+
+#myFooter .fa-google-plus:hover {
+  color: red;
+}
+
+#myFooter .fa-google-plus:focus {
+  color: red;
+}
+
+#myFooter .fa-twitter:hover {
+  color: #00aced;
+}
+
+#myFooter .fa-twitter:focus {
+  color: #00aced;
+}
+#myFooter .fa-instagram:hover {
+  color: #8e4571;
+}
+
+#myFooter .fa-instagram:focus {
+  color: #240b31;
+}
+
+
+@media screen and (max-width: 767px) {
+  #myFooter {
+      text-align: center;
+  }
+  #myFooter .row {
+      margin: 0;
+  }
+}
+
+
+
+/* CSS used for positioning the footers at the bottom of the page. */
+/* You can remove this. */
+
+
+
+.content{
+ flex: 1 0 auto;
+ -webkit-flex: 1 0 auto;
+ min-height: 200px;
+}
+
+#myFooter{
+ flex: 0 0 auto;
+ -webkit-flex: 0 0 auto;
+}
+/* End Footer */
