--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4,6 +4,7 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; */
+  scroll-behavior: smooth;
 }
 
 html,
@@ -13,6 +14,12 @@ body {
   padding: 0;
   overflow-x: hidden;
   line-height: 2.3em;
+  -webkit-transform: translateZ(0px);
+-webkit-transform: translate3d(0,0,0);
+-webkit-perspective: 1000;
+-webkit-overflow-scrolling: touch;
+overflow-y: scroll;
+
 
 }
 
